syntax = "proto3";
package airsettle.airsettle;

option go_package = "github.com/Airchains-Studio/Settlement_Layer/x/airsettle/types";

message Batch {
  
  uint64 batchNumber = 1; 
  string merkleRootHash = 2; 
  string prevMerkleRootHash = 3; 
  string zkProof = 4; 
}
